--- a/Assignment1.html
+++ b/Assignment1.html
@@ -1,3 +1,5 @@
+<!-- Write an HTML code to design a webpage using the 4 basic tags namely link, table, list and image. -->
+
 <!DOCTYPE html>
 <html lang="en">
     
