--- a/Assignment1.html
+++ b/Assignment1.html
@@ -1,4 +1,4 @@
-<!-- Write an HTML code to design a webpage using the 4 basic tags namely link, table, list and image. -->
+<!-- Write an HTML code to design a webpage using the 5 basic tags namely link, table, list, image and form. -->
 
 <!DOCTYPE html>
 <html lang="en">
